# engagic

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPLETE_INTEGRATION_AUDIT_2025-10-30.md  DATA_EXPOSURE_AUDIT_2025-10-30.md  DEPLOYMENT_READY_ITEM_ARCHITECTURE.md  DONATION_SETUP.md  Dockerfile  FOUNDATION_FIXES.md  PHASE_2_COMPLETION_NOTES.md  PROCESSING_FLOW_ANALYSIS.md  README.md  REFACTORING.md  REGIONAL_COMMANDS_SUMMARY.md  STATUS.md  SYNC_VISIBILITY_GUIDE.md  TWO_PIPELINE_ARCHITECTURE.md  __init__.py  agenda_chunker_template.py  app.py  architectural_consistency_v2.md  architectural_consistency_v3.md  config.py  deploy.sh  docker-compose.yml  exceptions.py  fix_all_imports.py  fix_imports.py  granicus_view_ids.json  install-prometheus.sh  massive_boy.md  mcp_server.py  migrate_sqlite_to_postgres.py  migrate_structure.sh  prometheus.service  prometheus.yml  pyproject.toml  railway.toml  requirements.txt  test_gemini.py  (+3 more)
.claude/agents/: mistral-ocr-parser.md
.github/workflows/: lint.yml
analysis/: README.md  analyzer_async.py  rate_limiter_async.py
analysis/llm/: prompts_v2.json  prompts_v2_old.json  prompts_v3.json  summarizer.py
analysis/topics/: normalizer.py  taxonomy.json
app/: README.md  README_population.md  adapters.py  anthropic_rate_limiter.py  app.py  background_processor.py  batch_populate.py  burtest.py  city_discovery.py  civicclerk_test.py  config.py  daemon.py  database.py  db_viewer.py  discovered_cities.json  fullstack.py  fullstack_backup.py  granicus_view_ids.json  meetings.db  pdf_api_processor.py  pdf_chunker.py  pdf_ocr_extractor.py  pdf_scraper_utils.py  populate_cities.py  populate_population.py  rate_limit_handler.py  requirements.txt  run_population.py  the_people.py  utils.py  vendor_detector.py  vendor_names.json
app/databases/: __init__.py  analytics_db.py  base_db.py  database_manager.py  locations_db.py  meetings_db.py
backend/: README.md  requirements.txt
backend-rs/src/: lib.rs
database/: ASYNCPG_JSONB_HANDLING.md  README.md  db.py  db_old.py  db_postgres.py  id_generation.py  migrate.py  models.py  schema.sql  schema_postgres.sql  schema_userland.sql  search.py  search_utils.py  sync_bridge.py  transaction.py  vote_utils.py
deliberation/: README.md  __init__.py  clustering.py
docs/: ANTHROPIC_DOCS.md  API.md  ARCHITECTURAL_CONSISTENCY.md  ARCHITECTURE_REVIEW.md  AUTOCOMPLETE_DESIGN.md  BREAKTHROUGH_COMPLETE.md  CLOSED_LOOP_ARCHITECTURE.md  CORRUPTION_ANALYSIS_SUMMARY.txt  DATA_CLEANUP_OCT2025.md  DELIBERATION_LOCAL_FIRST.md  DEPLOYMENT.md  FRONTEND.md  FRONTEND_API.md  FRONTEND_DEV_GUIDE.md  FRONTEND_README.md  FRONTEND_ROUTING.md  FRONTEND_STYLING.md  GRANICUS_ITEM_PROCESSING.md  GRANICUS_UPCOMING_FIX.md  HTML_AGENDA_BREAKTHROUGH.md  IMPROVEMENT_PLAN.md  ITEM_LEVEL_PROCESSING.md  MATTERS_ARCHITECTURE.md  MATTER_TRACKING_FIX_2025_11_12.md  NO_DAEMON.md  POSTGRES_MIGRATION_SUMMARY.md  POSTGRES_SETUP.md  PROCESSOR_REFACTOR.md  README.md  REFACTOR_PLAN.md  REGIONAL_PROCESSING.md  REORGANIZATION_2025.md  RUST_DEVELOPMENT.md  SCHEMA.md  SESSION_OCT30_2025.md  SMOKEPAC.md  TECH_DEBT.md  TERMS_OF_SERVICE.md  TOPIC_EXTRACTION.md  VENDOR_REFACTOR_PROPOSAL.md  (+9 more)
frontend/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  wrangler.json
functions/: adapters.py
infocore/: config.py
infra/: Cargo.toml  README.md  conductor.py  daemon.py  pyproject.toml
infra/src/: conductor.rs  database.rs  lib.rs  rate_limiter.rs
infra/src/pdf/: extractor.rs  mod.rs  validator.rs
jobs/: conductor.py  daemon.py
munis/: README.md  bay-area-2.txt  bay-area-all.txt  bay-area.txt  ca-counties.txt  east-coast.txt  florida.txt  meeting-level.txt  metro-areas-working.txt  metro-areas.txt  monterey-county.txt  never-synced.txt  new-counties-2026-04-10.txt  newly-synced.txt  notable-unprocessed.txt  processed.txt  queued-no-summaries.txt  sbc.txt  socal.txt  synced-unprocessed-reversed.txt  synced-unprocessed.txt  synced.txt  test-small.txt  texas-triangle.txt  top-200-cities.csv  unprocessed.txt  unsynced-top100.txt
parsing/: README.md  chicago_pdf.py  chunker.py  menlopark_pdf.py  participation.py  pdf.py
pipeline/: README.md  admin.py  analyzer.py  click_types.py  conductor.py  fetcher.py  models.py  processor.py  utils.py
prompts/: happening.md
regions/: bay-area.txt  metro-areas-debug.txt  metro-areas-working.txt
scripts/: README.md  __init__.py  analyze_corruption_v2.py  analyze_processing_logs.py  audit_chunker.py  auto_generated_fixes.sql  backfill_canonical_summaries.py  backfill_committees.py  backfill_matter_ids.py  backfill_matter_titles.py  backfill_orphaned_matters.py  backfill_vote_outcomes.py  clean_matter_appearances.py  db_maintenance.py  db_viewer.py  debug_item_failure.py  deploy.sh  deploy_background_processor.sh  diagnostics.py  discover_granicus_api.py  estimate_tokens.py  fix_all_database_issues.py  fix_data_issues.py  fix_database_corruption.sql  fix_imports.py  fix_jsonb_data.py  fix_jsonb_data.sql  fix_matter_tracking_schema.py  fix_numeric_prefix_matter_ids.py  generate_tiles.py  health_check.py  import_census_boundaries.py  import_city_populations.py  ingest_manual_pdfs.py  migrate_add_participation.py  migrate_add_topics.py  migrate_matter_ids.py  migrate_matter_tracking_schema.py  migrate_meeting_ids.py  migrate_queue_to_source_url.py  (+44 more)
server/: README.md  dependencies.py  main.py  main_old.py  metrics.py  rate_limiter.py
tests/: __init__.py  civicclerk_test.py  gatest.py  stress_test.py  test_cambridge_sync.py  test_chunking_simple.py  test_id_generation.py  test_matter_tracking_integration.py  test_meeting_repository.py  test_postgres_edge_cases.py  test_postgres_load.py  test_queue_reenqueue.py  test_store_meeting_from_sync.py  test_validator.py
userland/: DEPLOYMENT.md  MIGRATION_NOTES.md  README.md  settings.py
vendors/: README.md  factory.py  rate_limiter.py  rate_limiter_async.py  schemas.py  session_manager.py  session_manager_async.py  validator.py
(+443 files in other folders)
