[project]
name = "engagic"
version = "0.1.0"
description = "Engagic is for the people"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "anthropic>=0.64.0",
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.1",
    "google-genai",
    "lxml",
    "nltk",
    "pillow",
    "playwright",
    "psutil",
    "pymupdf>=1.26.4",
    "pypdf2>=3.0.1",
    "requests",
    "sqlalchemy<2.0",
    "sqlalchemy-mate<2.0",
    "uszipcode>=1.0.1",
    "uvicorn>=0.35.0",
    "pyright>=1.1.407",
    "maturin",
    "engagic-core",
]

[project.optional-dependencies]
premium = [
    "mistralai>=1.0.0",  # For Tier 2 OCR processing (paid customers only)
]
[tool.uv.sources]
engagic-core = { path = "infra", editable = true }

[tool.pyright]
include = ["backend"]
exclude = ["**/__pycache__", ".venv", "venv"]
typeCheckingMode = "basic"  # or "standard" or "strict"
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = false
