[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vendors", "vendors.adapters", "parsing", "analysis", "analysis.llm", "analysis.topics", "pipeline", "database", "server"]
py-modules = ["config"]

[project]
name = "engagic"
version = "0.1.0"
description = "Engagic is for the people"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uv>=0.9.0",
    "aiohttp>=3.12.15",
    "anthropic>=0.64.0",
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.1",
    "google-genai",
    "lxml",
    "nltk",
    "pillow",
    "playwright",
    "psutil",
    "pymupdf>=1.26.4",
    "pypdf2>=3.0.1",
    "python-dateutil>=2.8.2",
    "requests",
    "sqlalchemy<2.0",
    "sqlalchemy-mate<2.0",
    "uszipcode>=1.0.1",
    "uvicorn>=0.35.0",
    "pyright>=1.1.407",
    "maturin",
    "python-levenshtein>=0.27.1",
    "feedparser>=6.0.12",
]

[project.scripts]
engagic-daemon = "pipeline.conductor:main"
engagic-conductor = "pipeline.conductor:main"

[project.optional-dependencies]
premium = [
    "mistralai>=1.0.0",  # For Tier 2 OCR processing (paid customers only)
]

[tool.pyright]
include = ["vendors", "parsing", "analysis", "pipeline", "database", "server"]
exclude = ["**/__pycache__", ".venv", "venv", "scripts", "docs"]
typeCheckingMode = "basic"  # or "standard" or "strict"
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = false
