[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "exceptions"]
include-package-data = true

[tool.setuptools.package-data]
database = ["schema.sql", "migrations/*.sql"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vendors*", "parsing*", "analysis*", "pipeline*", "database*", "server*", "userland*"]
exclude = ["tests*", "scripts*", "docs*", "frontend*"]

[project]
name = "engagic"
version = "0.1.0"
description = "Engagic is for the people"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uv>=0.9.0",
    "aiohttp>=3.12.15",
    "anthropic>=0.64.0",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.5",
    "click>=8.1.0",
    "email-validator>=2.0.0",
    "fastapi>=0.116.1",
    "google-genai",
    "lxml",
    "nltk",
    "pillow",
    "playwright",
    "prometheus-client>=0.21.0",
    "psutil",
    "pymupdf>=1.26.4",
    "pypdf2>=3.0.1",
    "python-jose[cryptography]>=3.3.0",
    "pytesseract>=0.3.10",
    "python-dateutil>=2.8.2",
    "qrcode>=8.0",
    "requests",
    "stripe>=11.3.0",
    "structlog>=24.1.0",
    "uszipcode>=1.0.1",
    "uvicorn>=0.35.0",
    "pyright>=1.1.407",
    "maturin",
    "python-levenshtein>=0.27.1",
    "feedparser>=6.0.12",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
]

[project.scripts]
engagic-daemon = "pipeline.conductor:main"
engagic-conductor = "pipeline.conductor:main"

[project.optional-dependencies]
premium = [
    "mistralai>=1.0.0",  # For Tier 2 OCR processing (paid customers only)
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-aiohttp>=1.0.5",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.1",
    "httpx>=0.28.1",  # For HTTP mocking in tests
]

[tool.pyright]
include = ["vendors", "parsing", "analysis", "pipeline", "database", "server", "userland"]
exclude = ["**/__pycache__", ".venv", "venv", "scripts", "docs", "motioncount"]
typeCheckingMode = "basic"  # or "standard" or "strict"
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = false
