[package]
name = "engagic_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "engagic_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }

# PDF Processing
mupdf = "0.5"

# HTTP Client
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
unicode-normalization = "0.1"
regex = "1.10"
once_cell = "1.19"
urlencoding = "2.1"

[dev-dependencies]
criterion = "0.5"
