[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "engagic-core"
version = "0.1.0"
description = "Rust-powered PDF extraction and queue processing for Engagic"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "maturin>=1.9.6",
]

[tool.maturin]
module-name = "engagic_core"
